--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Expense Tracker - Stage 1</title>
+    <title>Expense Widget - Stage 2</title>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -11,11 +11,12 @@
     <script src="https://cdn.sheetjs.com/xlsx-0.20.1/package/dist/xlsx.full.min.js"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <style>
-        body { background-color: #f3f4f6; font-family: sans-serif; }
+        body { background-color: #f3f4f6; font-family: sans-serif; user-select: none; }
         .excel-grid { border-collapse: collapse; width: 100%; }
         .excel-grid th, .excel-grid td { border: 1px solid #e5e7eb; padding: 8px 12px; text-align: left; }
         .excel-grid th { background-color: #f9fafb; font-weight: 600; color: #374151; }
         .excel-grid tr:hover { background-color: #f0fdf4; }
+        .no-scrollbar::-webkit-scrollbar { display: none; }
     </style>
 </head>
 <body>
@@ -24,17 +25,32 @@
         const { useState, useEffect } = React;
 
         const ExpenseTracker = () => {
+            // State
             const [expenses, setExpenses] = useState([]);
-            const [formData, setFormData] = useState({ name: '', amount: '', date: new Date().toISOString().split('T')[0] });
+            const [locations, setLocations] = useState(['Home', 'Office', 'Online', 'Travel']);
+            const [isWidgetMode, setIsWidgetMode] = useState(false);
+            const [showSettings, setShowSettings] = useState(false);
+            const [currencySymbol, setCurrencySymbol] = useState('$');
+            const [formData, setFormData] = useState({ name: '', amount: '', date: new Date().toISOString().split('T')[0], location: 'Home' });
             const [notification, setNotification] = useState(null);
+            const [newLocationInput, setNewLocationInput] = useState("");
 
+            // Effects
             useEffect(() => {
-                const saved = localStorage.getItem('my_excel_expenses');
-                if (saved) setExpenses(JSON.parse(saved));
+                const savedData = localStorage.getItem('my_excel_expenses');
+                const savedLocs = localStorage.getItem('my_expense_locations');
+                const savedCurr = localStorage.getItem('my_expense_currency');
+                if (savedData) setExpenses(JSON.parse(savedData));
+                if (savedLocs) setLocations(JSON.parse(savedLocs));
+                if (savedCurr) setCurrencySymbol(savedCurr);
             }, []);
+
             useEffect(() => localStorage.setItem('my_excel_expenses', JSON.stringify(expenses)), [expenses]);
+            useEffect(() => localStorage.setItem('my_expense_locations', JSON.stringify(locations)), [locations]);
+            useEffect(() => localStorage.setItem('my_expense_currency', currencySymbol), [currencySymbol]);
             useEffect(() => lucide.createIcons());
 
+            // Handlers
             const addExpense = (e) => {
                 e.preventDefault();
                 if (!formData.name || !formData.amount) return;
@@ -44,10 +60,19 @@
             };
 
             const deleteExpense = (id) => setExpenses(expenses.filter(e => e.id !== id));
+            
+            const addLocation = (e) => {
+                e.preventDefault();
+                if (newLocationInput && !locations.includes(newLocationInput)) {
+                    setLocations([...locations, newLocationInput]);
+                    setNewLocationInput("");
+                }
+            };
+            const removeLocation = (loc) => setLocations(locations.filter(l => l !== loc));
 
             const downloadExcel = () => {
-                if (expenses.length === 0) return showNotify("No data!");
-                const ws = XLSX.utils.json_to_sheet(expenses.map(e => ({ Date: e.date, Name: e.name, Amount: e.amount })));
+                if (!expenses.length) return showNotify("No data!");
+                const ws = XLSX.utils.json_to_sheet(expenses.map(e => ({ Date: e.date, Location: e.location, Name: e.name, Amount: e.amount })));
                 const wb = XLSX.utils.book_new();
                 XLSX.utils.book_append_sheet(wb, ws, "Expenses");
                 XLSX.writeFile(wb, "Expense_Sheet.xlsx");
@@ -57,28 +82,70 @@
             const showNotify = (msg) => { setNotification(msg); setTimeout(() => setNotification(null), 2000); };
             const total = expenses.reduce((sum, e) => sum + (e.amount || 0), 0);
 
+            // Views
+            if (showSettings) return (
+                <div className="fixed inset-0 bg-black/50 flex items-center justify-center p-4">
+                    <div className="bg-white rounded-xl w-full max-w-md p-6">
+                        <div className="flex justify-between mb-4"><h2 className="font-bold text-xl">Settings</h2><button onClick={() => setShowSettings(false)}><i data-lucide="x"></i></button></div>
+                        <div className="mb-4">
+                            <h3 className="font-semibold mb-2">Currency</h3>
+                            <div className="flex gap-2">{['$', '€', '£', '₹', '¥'].map(s => <button key={s} onClick={() => setCurrencySymbol(s)} className={`w-8 h-8 rounded border ${currencySymbol === s ? 'bg-green-600 text-white' : ''}`}>{s}</button>)}</div>
+                        </div>
+                        <div className="mb-4">
+                            <h3 className="font-semibold mb-2">Locations</h3>
+                            <div className="flex flex-wrap gap-2 mb-2">{locations.map(l => <span key={l} className="bg-blue-100 text-blue-800 px-2 rounded text-sm flex gap-1 items-center">{l} <button onClick={() => removeLocation(l)}><i data-lucide="x" className="w-3 h-3"></i></button></span>)}</div>
+                            <form onSubmit={addLocation} className="flex gap-2"><input value={newLocationInput} onChange={e => setNewLocationInput(e.target.value)} placeholder="Add location" className="border p-1 flex-1 rounded" /><button className="bg-blue-600 text-white px-3 rounded">Add</button></form>
+                        </div>
+                    </div>
+                </div>
+            );
+
+            if (isWidgetMode) return (
+                <div className="h-screen w-screen bg-white p-4 flex flex-col">
+                    <div className="flex justify-between mb-2">
+                        <div><p className="text-xs text-gray-500 font-bold">Total</p><p className="text-3xl font-bold text-green-600">{currencySymbol}{total.toFixed(2)}</p></div>
+                        <button onClick={() => setIsWidgetMode(false)}><i data-lucide="maximize-2"></i></button>
+                    </div>
+                    <form onSubmit={addExpense} className="flex flex-col gap-2">
+                        <input className="border p-2 rounded bg-gray-50" placeholder="Name" value={formData.name} onChange={e => setFormData({...formData, name: e.target.value})} />
+                        <div className="flex gap-2">
+                            <select className="border p-2 rounded w-1/3" value={formData.location} onChange={e => setFormData({...formData, location: e.target.value})}>{locations.map(l => <option key={l} value={l}>{l}</option>)}</select>
+                            <input className="border p-2 rounded w-1/3" type="number" placeholder="0.00" value={formData.amount} onChange={e => setFormData({...formData, amount: e.target.value})} />
+                            <button className="bg-green-600 text-white rounded flex-1 flex justify-center items-center"><i data-lucide="plus"></i></button>
+                        </div>
+                    </form>
+                    {notification && <div className="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-black/80 text-white px-3 py-1 rounded text-xs">{notification}</div>}
+                </div>
+            );
+
             return (
-                <div className="min-h-screen p-8 max-w-4xl mx-auto">
+                <div className="min-h-screen p-8 max-w-5xl mx-auto">
                     <div className="bg-white rounded-xl shadow-lg overflow-hidden">
                         <div className="bg-green-600 p-6 text-white flex justify-between items-center">
                             <h1 className="text-2xl font-bold flex gap-2"><i data-lucide="sheet"></i> Expense Tracker</h1>
-                            <div className="text-right"><p className="text-sm">TOTAL</p><p className="text-2xl font-bold">${total.toFixed(2)}</p></div>
+                            <div className="flex items-center gap-3">
+                                <div className="text-right hidden md:block"><p className="text-sm">Total</p><p className="text-2xl font-bold">{currencySymbol}{total.toFixed(2)}</p></div>
+                                <button onClick={() => setShowSettings(true)} className="bg-green-700 p-2 rounded"><i data-lucide="settings"></i></button>
+                                <button onClick={() => setIsWidgetMode(true)} className="bg-green-700 p-2 rounded"><i data-lucide="minimize-2"></i></button>
+                            </div>
                         </div>
                         <div className="p-6 bg-gray-50 border-b">
-                            <form onSubmit={addExpense} className="flex gap-4 items-end">
-                                <input type="date" className="p-2 border rounded" value={formData.date} onChange={e => setFormData({...formData, date: e.target.value})} required />
-                                <input type="text" placeholder="Expense Name" className="flex-1 p-2 border rounded" value={formData.name} onChange={e => setFormData({...formData, name: e.target.value})} required />
-                                <input type="number" placeholder="Amount" step="0.01" className="w-32 p-2 border rounded" value={formData.amount} onChange={e => setFormData({...formData, amount: e.target.value})} required />
-                                <button type="submit" className="bg-green-600 text-white px-6 py-2 rounded font-bold">Add</button>
+                            <form onSubmit={addExpense} className="flex flex-col md:flex-row gap-4 items-end">
+                                <input type="date" className="p-2 border rounded w-full md:w-auto" value={formData.date} onChange={e => setFormData({...formData, date: e.target.value})} />
+                                <select className="p-2 border rounded w-full md:w-auto" value={formData.location} onChange={e => setFormData({...formData, location: e.target.value})}>{locations.map(l => <option key={l} value={l}>{l}</option>)}</select>
+                                <input type="text" placeholder="Expense Name" className="flex-1 p-2 border rounded w-full" value={formData.name} onChange={e => setFormData({...formData, name: e.target.value})} />
+                                <input type="number" placeholder="Amount" step="0.01" className="p-2 border rounded w-full md:w-auto" value={formData.amount} onChange={e => setFormData({...formData, amount: e.target.value})} />
+                                <button type="submit" className="bg-green-600 text-white px-6 py-2 rounded font-bold w-full md:w-auto">Add</button>
                             </form>
                         </div>
                         <div className="p-6">
                             <table className="excel-grid w-full mb-6">
-                                <thead><tr><th>Date</th><th>Name</th><th className="text-right">Amount</th><th className="text-center">Action</th></tr></thead>
+                                <thead><tr><th>Date</th><th>Location</th><th>Name</th><th className="text-right">Amount</th><th className="text-center">Action</th></tr></thead>
                                 <tbody>
                                     {expenses.map(e => (
                                         <tr key={e.id}>
-                                            <td>{e.date}</td><td>{e.name}</td><td className="text-right">${e.amount.toFixed(2)}</td>
+                                            <td>{e.date}</td><td><span className="bg-gray-100 px-2 py-1 rounded text-xs">{e.location}</span></td>
+                                            <td>{e.name}</td><td className="text-right">{currencySymbol}{e.amount.toFixed(2)}</td>
                                             <td className="text-center"><button onClick={() => deleteExpense(e.id)} className="text-red-500"><i data-lucide="trash-2" className="w-4 h-4"></i></button></td>
                                         </tr>
                                     ))}
@@ -87,7 +154,7 @@
                             <button onClick={downloadExcel} className="w-full bg-white border-2 border-green-600 text-green-700 font-bold py-2 rounded flex justify-center gap-2"><i data-lucide="download"></i> Download .xlsx</button>
                         </div>
                     </div>
-                    {notification && <div className="fixed bottom-4 right-4 bg-gray-800 text-white px-4 py-2 rounded shadow-lg">{notification}</div>}
+                    {notification && <div className="fixed bottom-4 right-4 bg-gray-800 text-white px-6 py-3 rounded shadow-xl">{notification}</div>}
                 </div>
             );
         };
