--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Expense Widget - Stage 2</title>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <title>Expense Widget - AI</title>
+    
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.sheetjs.com/xlsx-0.20.1/package/dist/xlsx.full.min.js"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+
     <style>
         body { background-color: #f3f4f6; font-family: sans-serif; user-select: none; }
         .excel-grid { border-collapse: collapse; width: 100%; }
@@ -17,59 +22,77 @@
         .excel-grid th { background-color: #f9fafb; font-weight: 600; color: #374151; }
         .excel-grid tr:hover { background-color: #f0fdf4; }
         .no-scrollbar::-webkit-scrollbar { display: none; }
+        .prose h1, .prose h2 { font-weight: bold; margin-bottom: 0.5em; }
+        .prose ul { list-style: disc; padding-left: 1.5em; margin-bottom: 1em; }
+        .sparkle-btn { background: linear-gradient(135deg, #6366f1 0%, #a855f7 100%); }
     </style>
 </head>
 <body>
     <div id="root"></div>
+
     <script type="text/babel">
         const { useState, useEffect } = React;
 
         const ExpenseTracker = () => {
-            // State
             const [expenses, setExpenses] = useState([]);
             const [locations, setLocations] = useState(['Home', 'Office', 'Online', 'Travel']);
             const [isWidgetMode, setIsWidgetMode] = useState(false);
             const [showSettings, setShowSettings] = useState(false);
+            const [showAnalysis, setShowAnalysis] = useState(false);
+            const [userApiKey, setUserApiKey] = useState("AIzaSyARzEF3VyFD4zhw9QNesicI_tzJpHVIoEE");
+            const [isAiLoading, setIsAiLoading] = useState(false);
+            const [analysisResult, setAnalysisResult] = useState("");
             const [currencySymbol, setCurrencySymbol] = useState('$');
             const [formData, setFormData] = useState({ name: '', amount: '', date: new Date().toISOString().split('T')[0], location: 'Home' });
             const [notification, setNotification] = useState(null);
             const [newLocationInput, setNewLocationInput] = useState("");
 
-            // Effects
             useEffect(() => {
                 const savedData = localStorage.getItem('my_excel_expenses');
                 const savedLocs = localStorage.getItem('my_expense_locations');
                 const savedCurr = localStorage.getItem('my_expense_currency');
+                const savedKey = localStorage.getItem('my_gemini_api_key');
                 if (savedData) setExpenses(JSON.parse(savedData));
                 if (savedLocs) setLocations(JSON.parse(savedLocs));
                 if (savedCurr) setCurrencySymbol(savedCurr);
+                if (savedKey && savedKey.length > 10) setUserApiKey(savedKey);
             }, []);
 
             useEffect(() => localStorage.setItem('my_excel_expenses', JSON.stringify(expenses)), [expenses]);
             useEffect(() => localStorage.setItem('my_expense_locations', JSON.stringify(locations)), [locations]);
             useEffect(() => localStorage.setItem('my_expense_currency', currencySymbol), [currencySymbol]);
+            useEffect(() => localStorage.setItem('my_gemini_api_key', userApiKey), [userApiKey]);
             useEffect(() => lucide.createIcons());
 
-            // Handlers
+            const callGemini = async (prompt) => {
+                if (!userApiKey) { setShowSettings(true); return showNotify("Set API Key first!"); }
+                try {
+                    const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-09-2025:generateContent?key=${userApiKey}`, {
+                        method: 'POST', headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify({ contents: [{ parts: [{ text: prompt }] }] })
+                    });
+                    const data = await response.json();
+                    return data.candidates?.[0]?.content?.parts?.[0]?.text || "Error";
+                } catch (e) { console.error(e); return "Error"; }
+            };
+
+            const handleAnalyze = async () => {
+                if (!expenses.length) return showNotify("No data!");
+                setShowAnalysis(true); setAnalysisResult(""); setIsAiLoading(true);
+                const result = await callGemini(`Analyze these expenses (Currency: ${currencySymbol}): ${JSON.stringify(expenses.map(e => ({n:e.name, a:e.amount, l:e.location})))}. Provide summary, categories, and 1 tip. Use emojis. Markdown format.`);
+                setAnalysisResult(result); setIsAiLoading(false);
+            };
+
             const addExpense = (e) => {
                 e.preventDefault();
-                if (!formData.name || !formData.amount) return;
                 setExpenses([...expenses, { id: Date.now(), ...formData, amount: parseFloat(formData.amount) }]);
                 setFormData({ ...formData, name: '', amount: '' });
                 showNotify("Added!");
             };
-
             const deleteExpense = (id) => setExpenses(expenses.filter(e => e.id !== id));
+            const addLocation = (e) => { e.preventDefault(); if(newLocationInput){ setLocations([...locations, newLocationInput]); setNewLocationInput(""); }};
+            const removeLocation = (l) => setLocations(locations.filter(loc => loc !== l));
             
-            const addLocation = (e) => {
-                e.preventDefault();
-                if (newLocationInput && !locations.includes(newLocationInput)) {
-                    setLocations([...locations, newLocationInput]);
-                    setNewLocationInput("");
-                }
-            };
-            const removeLocation = (loc) => setLocations(locations.filter(l => l !== loc));
-
             const downloadExcel = () => {
                 if (!expenses.length) return showNotify("No data!");
                 const ws = XLSX.utils.json_to_sheet(expenses.map(e => ({ Date: e.date, Location: e.location, Name: e.name, Amount: e.amount })));
@@ -78,11 +101,18 @@
                 XLSX.writeFile(wb, "Expense_Sheet.xlsx");
                 showNotify("Downloaded!");
             };
-
             const showNotify = (msg) => { setNotification(msg); setTimeout(() => setNotification(null), 2000); };
             const total = expenses.reduce((sum, e) => sum + (e.amount || 0), 0);
 
-            // Views
+            if (showAnalysis) return (
+                <div className="fixed inset-0 bg-black/50 flex items-center justify-center p-4">
+                    <div className="bg-white rounded-xl w-full max-w-lg p-6 max-h-[90vh] overflow-y-auto">
+                        <div className="flex justify-between mb-4"><h2 className="text-xl font-bold flex gap-2"><i data-lucide="sparkles"></i> Insights</h2><button onClick={() => setShowAnalysis(false)}><i data-lucide="x"></i></button></div>
+                        {isAiLoading ? <p className="text-purple-600 animate-pulse text-center">AI is thinking...</p> : <div className="prose text-sm" dangerouslySetInnerHTML={{ __html: marked.parse(analysisResult) }}></div>}
+                    </div>
+                </div>
+            );
+
             if (showSettings) return (
                 <div className="fixed inset-0 bg-black/50 flex items-center justify-center p-4">
                     <div className="bg-white rounded-xl w-full max-w-md p-6">
@@ -90,6 +120,10 @@
                         <div className="mb-4">
                             <h3 className="font-semibold mb-2">Currency</h3>
                             <div className="flex gap-2">{['$', '€', '£', '₹', '¥'].map(s => <button key={s} onClick={() => setCurrencySymbol(s)} className={`w-8 h-8 rounded border ${currencySymbol === s ? 'bg-green-600 text-white' : ''}`}>{s}</button>)}</div>
+                        </div>
+                        <div className="mb-4 bg-purple-50 p-2 rounded border border-purple-200">
+                             <h3 className="font-semibold text-purple-800 text-sm mb-1">Gemini API Key</h3>
+                             <input type="password" value={userApiKey} onChange={e => setUserApiKey(e.target.value)} className="w-full border p-1 rounded text-sm" />
                         </div>
                         <div className="mb-4">
                             <h3 className="font-semibold mb-2">Locations</h3>
@@ -125,6 +159,7 @@
                             <h1 className="text-2xl font-bold flex gap-2"><i data-lucide="sheet"></i> Expense Tracker</h1>
                             <div className="flex items-center gap-3">
                                 <div className="text-right hidden md:block"><p className="text-sm">Total</p><p className="text-2xl font-bold">{currencySymbol}{total.toFixed(2)}</p></div>
+                                <button onClick={handleAnalyze} className="sparkle-btn px-4 py-2 rounded text-white flex gap-2 items-center"><i data-lucide="sparkles" className="w-4 h-4"></i> Insights</button>
                                 <button onClick={() => setShowSettings(true)} className="bg-green-700 p-2 rounded"><i data-lucide="settings"></i></button>
                                 <button onClick={() => setIsWidgetMode(true)} className="bg-green-700 p-2 rounded"><i data-lucide="minimize-2"></i></button>
                             </div>
